# vortex-mod-youtube

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plugin.toml  vortex_mod_youtube.wasm
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
src/: error.rs  extractor.rs  ipc_tests.rs  lib.rs  metadata.rs  plugin_api.rs  quality_manager.rs  url_matcher.rs
