[package]
name = "vortex-mod-youtube"
version = "1.2.2"
edition = "2021"
description = "YouTube WASM plugin for Vortex — videos, playlists, shorts via yt-dlp"
license = "GPL-3.0"
authors = ["vortex-community"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
rstest = "0.24"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
